Added grid search info to report

--- a/report.ipynb
+++ b/report.ipynb
@@ -157,9 +157,9 @@
    "source": [
     "## Grid Search\n",
     "\n",
-    "As seems to be tradition in my machine learning projects, I then decided to create another grid search. This time however, my search was fairly abstract, because I was fine-tuning a model instead of training from scratch. This meant that I didn't need to train multiple versions of the same model with slight tweaks for example: embedding size, number of units in a layer, optimizers and layer activation functions. Instead my grid search consisted of: different model architectures, different pretrained models and batch size. This resulted in a much smaller number of models that needed to be trained and an overall shorter grid search time.\n",
+    "As seems to be tradition in my machine learning projects, I then decided to create another grid search. This time however, my search was fairly abstract, because I was fine-tuning a model instead of training from scratch. This meant that I didn't need to train multiple versions of the same model with slight tweaks for example: embedding size, number of units in a layer, optimizers and layer activation functions. Instead my grid search consisted of: different model architectures, different pretrained models and batch size. This resulted in a much smaller number of models, which turned out very beneficial, as finetuning a pretrained model can take a very long time depending on the models size.\n",
     "\n",
-    "The following is a comparison between this grid search and those which I created during my special topic and previous semesters project."
+    "The following is a brief recap of this semesters grid search and those which I created during my special topic and previous semesters project."
    ]
   },
   {
@@ -203,7 +203,15 @@
     "      </tr>\n",
     "      <tr>\n",
     "        <td class=\"tg-0pky\">Total Search Time</td>\n",
-    "        <td class=\"tg-dvpl\">2 Weeks</td>\n",
+    "        <td class=\"tg-dvpl\">3 Weeks</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0lax\">Average Model Size</td>\n",
+    "        <td class=\"tg-lqy6\">240 (MB)<br></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0lax\">Average Model Number of Parameters</td>\n",
+    "        <td class=\"tg-lqy6\">8.0 (Million)</td>\n",
     "      </tr>\n",
     "    </table>\n",
     "</td><td>\n",
@@ -252,6 +260,14 @@
     "        <td class=\"tg-0pky\">Total Search Time</td>\n",
     "        <td class=\"tg-dvpl\">6 Days</td>\n",
     "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0lax\">Average Model Size</td>\n",
+    "        <td class=\"tg-lqy6\">1.4 (MB)<br></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0lax\">Average Model Number of Parameters</td>\n",
+    "        <td class=\"tg-lqy6\">0.03 (Million)</td>\n",
+    "      </tr>\n",
     "    </table>\n",
     "</td><td>\n",
     "    <table class=\"tg\">\n",
@@ -264,25 +280,75 @@
     "        <td class=\"tg-lqy6\">BERT, RoBERTa, DistilBERT</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td class=\"tg-0lax\">Pretrained Models</td>\n",
-    "        <td class=\"tg-0lax\">base-uncased, large-uncased</td>\n",
-    "      </tr>\n",
-    "      <tr>\n",
     "        <td class=\"tg-0lax\">Batch Size</td>\n",
     "        <td class=\"tg-lqy6\">32, 64, 128, 256</td>\n",
     "      </tr>\n",
     "      <tr>\n",
+    "        <td class=\"tg-0lax\">Number Epochs Trained</td>\n",
+    "        <td class=\"tg-lqy6\">1, 2, 3, 4, 5</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
     "        <td class=\"tg-0lax\">Total Unique Models</td>\n",
-    "        <td class=\"tg-lqy6\">24</td>\n",
+    "        <td class=\"tg-lqy6\">60</td>\n",
     "      </tr>\n",
     "      <tr>\n",
     "        <td class=\"tg-0lax\">Total Search Time</td>\n",
     "        <td class=\"tg-lqy6\">2 Weeks</td>\n",
     "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0lax\">Average Model Size</td>\n",
+    "        <td class=\"tg-lqy6\">417 (MB)<br></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td class=\"tg-0lax\">Average Model Number of Parameters</td>\n",
+    "        <td class=\"tg-lqy6\">117.0 (Million)</td>\n",
+    "      </tr>\n",
     "    </table>\n",
     "</td></tr> </table>\n",
     "\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This semesters grid search had the smallest amount of models to train. This isnt by accident, it is a feature of the Transformers library. Transformers abstracts away alot of the hyper parameters that need to be tweaked and allows users to get models up and running quickly. This comes at the cost of size however, as is displayed above, the average size of a model trained through Transformers is almost 2x the size of one from my special topic's grid search and 297x the size of a model I trained during my project one's grid search. The Total Search time efficiency for this grid search was middle of the pack on a per model basis at roughly 5.6hrs/model compared to special topic's 14hrs/model and project one's 0.003hrs/model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grid Search Results\n",
+    "\n",
+    "The best model from the grid search had the following characteristics:\n",
+    "\n",
+    "```\n",
+    "    {\n",
+    "        Architecture Type: BERT,\n",
+    "        Batch Size: 32,\n",
+    "        Number Parameters: 117,000,000,\n",
+    "        Number Epochs Trained: 4,\n",
+    "        Number Of Labels: 3,\n",
+    "        Optimizer: AdamW,\n",
+    "        Dropout Percentage: 0.1,\n",
+    "        Activation: GeLu,\n",
+    "        Layer Hidden Size: 768,\n",
+    "        Embedding Size: 512,\n",
+    "        Number Attention Heads: 12,\n",
+    "        Number Hidden Layers: 12,\n",
+    "        Vocab Size: 30522,\n",
+    "        Test Dataset Results: {\n",
+    "            Amazon Reviews:      84.52868852459017\n",
+    "            Fine Food Reviews:   79.3371059013743\n",
+    "            Hand Annotated:      57.831325301204814\n",
+    "            IMDB:                81.22964169381108\n",
+    "            Sentiment140:        69.5959595959596\n",
+    "            Twitter Airline:     73.32044465925568\n",
+    "        }\n",
+    "    }\n",
+    "```"
    ]
   },
   {
