Added grid search info to report

--- a/report.ipynb
+++ b/report.ipynb
@@ -352,11 +352,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now that I had a compotent model trained, David asked me to create an interface for me to inference it."
+   ]
   }
  ],
  "metadata": {
