Added OP Text info

--- a/report.ipynb
+++ b/report.ipynb
@@ -355,8 +355,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that I had a compotent model trained, David asked me to create an interface for me to inference it."
+    "## [OP Text](https://github.com/knuddj1/op_text)\n",
+    "\n",
+    "With the best model above in hand, David asked me to create an interface so he could inference it. This is where the beginning of my python library OP Text started. The purpose of the library was to simplify the loading and usage of the Transformer's models. I started off creating a version of the library that only offered querying of a model.\n",
+    "\n",
+    "Usage of the initial library would have looked something like this:\n",
+    "\n",
+    "    from op_text import Classifier\n",
+    "    \n",
+    "    model_path = \"/example/path/to/model/\"\n",
+    "    model = Classifier(model_path)\n",
+    "    \n",
+    "    example_input = \"The dog wore a huge smile on its face\"\n",
+    "    model.predict(example_input)\n",
+    "    >> 1\n",
+    "    \n",
+    "At this stage the library was incredibly barebones. The number returned from the predict function is the numerical representation of the classification label. In this example the '1' is a prediction for the positive class given { 0: Negative, 1: Positive }. This label, while useful, does not provide very much information. Acknowledging this, and with request from David, I added the models, class prediction, confidence scores to the return value of the predict function, in the libraries next iteration.\n",
+    "\n",
+    "Using the prediction function now looked something like this:\n",
+    "    \n",
+    "    example_input = \"The dog wore a huge smile on its face\"\n",
+    "    model.predict(example_input)\n",
+    "    >> (1, [0.084, 0.916])\n",
+    "    \n",
+    "The array above represents the models confidence, for each class, as to which the input belongs to. This provides more insight into the models prediction as the user can see how well the model is able to predict the right class. For example, given the prediction scores [0.48, 0.52], it would appear that the model doesn't really know the correct class, however, the input would still be classified as positive, a little misleading.\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -375,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
