--- a/report.ipynb
+++ b/report.ipynb
@@ -408,7 +408,7 @@
     "</style>\n",
     "\n",
     "<table>\n",
-    "<tr><th>One Hundred Sample</th><th>One Thousand Sample</th><th>Ten Thousand Sample</th><th>Grid Search Best</th></tr>\n",
+    "<tr><th>One Hundred Sample</th><th>One Thousand Sample</th>\n",
     "<tr><td>\n",
     "    <table class=\"tg\">\n",
     "      <tr>\n",
@@ -463,7 +463,11 @@
     "        <td class=\"tg-0pky\">26.292895118414695</td>\n",
     "      </tr>\n",
     "    </table>\n",
-    "</td><td>\n",
+    "</td></tr>\n",
+    "</table>\n",
+    "<table>\n",
+    "<tr><th>Ten Thousand Sample</th><th>Grid Search Best</th></tr>\n",
+    "<tr><td>\n",
     "    <table class=\"tg\">\n",
     "      <tr>\n",
     "        <td class=\"tg-0pky\">Amazon Reviews</td>\n",
