--- a/report.ipynb
+++ b/report.ipynb
@@ -408,7 +408,7 @@
     "</style>\n",
     "\n",
     "<table>\n",
-    "<tr><th>One Hundred Sample</th><th>One Thousand Sample</th>\n",
+    "    <tr><th>One Hundred Sample</th><th>One Thousand Sample</th></tr>\n",
     "<tr><td>\n",
     "    <table class=\"tg\">\n",
     "      <tr>\n",
@@ -580,7 +580,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Across the board the model that performs the best on all datasets is the best from the grid search."
+    "Across the board the model that performs the best on all datasets is the best model from the grid search. The second and third models, that have results that are fairly similar, are BERT and RoBERTa models, that are the 10000 sample models from the sample experiment. The 5 label models do not stick out at all and are middle of the pack in terms of performance. While disappointing, this isn't that surprising to me as the 5 label models were trained on data that was not from the same datasets as the test sets. This is further illustrated when we look at the 'hand made' dataset. All models perform worst on this dataset and the common similarity between all the models is that none of them are trained on data that is from the same dataset as that. I did not create a test set for the new dataset because I felt the exisiting one I had was good enough. In the future as a continuation to this project I would combine the original dataset and the new dataset and construct some new test sets from the dataset as well. I would then fine-tune a new batch of models to fit this data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OP Text Version 2\n",
+    "\n",
+    "I did not mention it above, but when David asked to do the sample experiment, I realised that I was needed to create an encapsulated version of the fine-tuning and testing code as I was writing the same boilerplate code over and over with just the dataset loading being different. It was from this realization that I decided to update the OP Text library and add a fit function for fine-tuning models and a evaluate function for testing models."
    ]
   },
   {
