--- a/report.ipynb
+++ b/report.ipynb
@@ -364,7 +364,7 @@
     "    from op_text import Classifier\n",
     "    \n",
     "    model_path = \"/example/path/to/model/\"\n",
-    "    model = Classifier(model_path)\n",
+    "    model = Classifier('bert', model_path) # params are architecture_type, pretrained_model_name_or_path\n",
     "    \n",
     "    example_input = \"The dog wore a huge smile on its face\"\n",
     "    model.predict(example_input)\n",
@@ -589,7 +589,76 @@
    "source": [
     "## OP Text Version 2\n",
     "\n",
-    "I did not mention it above, but when David asked to do the sample experiment, I realised that I was needed to create an encapsulated version of the fine-tuning and testing code as I was writing the same boilerplate code over and over with just the dataset loading being different. It was from this realization that I decided to update the OP Text library and add a fit function for fine-tuning models and a evaluate function for testing models."
+    "I did not mention it above, but when David asked to do the sample experiment, I realised that I was needed to create an encapsulated version of the fine-tuning and testing code as I was writing the same boilerplate code over and over with just the dataset loading being different. It was from this realization that I decided to update the OP Text library and add a fit function for fine-tuning models, an evaluate function for testing models and a save function for saving models. I also decided to remove the Classifier class and instead break it into individual model classes.\n",
+    "\n",
+    "**OLD:**\n",
+    "```\n",
+    "from op_text import Classfier\n",
+    "\n",
+    "model = Classfier(architecture_type, pretrained_model_name_or_path)\n",
+    "```\n",
+    "\n",
+    "**NEW:**\n",
+    "\n",
+    "```\n",
+    "from op_text import Bert, Roberta, DistilBert\n",
+    "\n",
+    "bert = Bert(pretrained_model_name_or_path)\n",
+    "roberta = Roberta(pretrained_model_name_or_path)\n",
+    "distilbert = DistilBert(pretrained_model_name_or_path)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get a list of the available pretrained models for a model, I added a DOWNLOADABLES constant to each class.\n",
+    "\n",
+    "```\n",
+    "Bert.DOWNLOADBLES\n",
+    ">> ['bert-base-uncased', 'bert-large-uncased']\n",
+    "    \n",
+    "Roberta.DOWNLOADABLES\n",
+    ">> ['roberta-base', 'roberta-large']\n",
+    "    \n",
+    "DistilBert.DOWNLOADABLES\n",
+    ">> ['distilbert-base-uncased']\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Usage of the new version of the library would now look something like this:\n",
+    "\n",
+    "```\n",
+    "    from op_text import Bert\n",
+    "    \n",
+    "    training_data, training_labels = # Loading Code\n",
+    "    test_data, test_labels = # Loading Code\n",
+    "    \n",
+    "    pretrained_model = Bert.DOWNLOADBLES[0] # 'bert-base-uncased'\n",
+    "    model = Bert(pretrained_model)\n",
+    "    \n",
+    "    model.fit(training_data, training_labels, batch_size=32, validation_split=0.2)\n",
+    "    model.save(\"/example/path/to/save/directory/\", \"example_model_save_name\")\n",
+    "    \n",
+    "    acc = model.evaluate(test_data, test_labels)\n",
+    "    >> 0.8 # Models Accuracy on the test set\n",
+    "    \n",
+    "    # Load model from disk for inference\n",
+    "    model = Bert(\"/example/path/to/saved/model/directory/\")\n",
+    "    \n",
+    "    to_predict = [\n",
+    "        \"Today was a horrible day!\",\n",
+    "        \"Isn't the world a beautiful place?\"\n",
+    "    ]\n",
+    "    \n",
+    "    model.predict(to_predict)\n",
+    "    >> [(0, [0.9, 0.1]), (1, [0.1, 0.9])]\n",
+    "```"
    ]
   },
   {
